# Intelligent-Autonomous-Vehicles-Course-Project

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: amcl_params.yaml  auto_mapping.rviz  base_local_planner_params.yaml  click_goal_params.yaml  click_navigation.rviz  costmap_common_params.yaml  global_costmap_params.yaml  gmapping_fast_params.yaml  kobuki_costmap_common_params.yaml  kobuki_explore_costmap_common_params.yaml  kobuki_explore_global_costmap_params.yaml  kobuki_explore_global_planner_params.yaml  kobuki_explore_local_costmap_params.yaml  kobuki_explore_local_planner_params.yaml  kobuki_explore_move_base_params.yaml  kobuki_global_planner_params.yaml  kobuki_local_planner_params.yaml  kobuki_nav_costmap_common_params.yaml  local_costmap_params.yaml  mapping_control_params.yaml  move_base_params.yaml  navigation.rviz  structured_mapper_params.yaml
launch/: kobuki_auto_mapping.launch  kobuki_go_to_goal.launch  kobuki_navigation.launch  summit_xl_mapping.launch  summit_xl_mapping_no_sim.launch  summit_xl_navigation.launch  summit_xl_patrol.launch
launch/includes/: gmapping.launch
maps/: README.md  summit_world.yaml
scripts/: check_environment.sh  click_goal.py  exploration_monitor.py  exploration_utils.py  launch_hint.py  mapping_control.py  navigation_status.py  run_demo.sh  save_map.sh  set_initial_pose_from_odom.py  structured_mapper.py  waypoint_patrol.py
