<?xml version="1.0"?>
<package format="2">
  <name>summit_xl_autonomous_nav</name>
  <version>1.0.0</version>
  <description>
    Autonomous waypoint navigation for Summit XL using ROS Navigation Stack
    (gmapping, AMCL, move_base). Built for The Construct ROSDS course project.
  </description>

  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export/>
</package>
